<resources>
    <string name="app_name">Bookshelf</string>
    <string name="skip_button_text">Пропустить</string>
    <string name="next_button_text">Далее</string>
    <string name="on_boarding_text_1">Добро пожаловать! \n \n Здесь ты можешь хранить все свои книги.</string>
    <string name="on_boarding_text_2">Просто поставь ее на свою книжную полку.</string>
    <string name="on_boarding_text_3">Не помнишь, есть ли у тебя нужное произведение - книжная полка всегда под рукой в твоем телефоне.</string>
    <string name="welcome_back">С возвращением!</string>
    <string name="welcome_login">Войдите в свой аккаунт</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="password_hint">Подтвердите пароль</string>
    <string name="login_btn">Войти</string>
    <string name="register">Регистрация</string>
    <string name="register_btn">Зарегистрироваться</string>
    <string name="name_hint">Имя</string>
    <string name="new_name_hint">Введите новое имя</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="search_hint">Поиск...</string>
    <string name="library">Мои книги</string>
    <string name="wishlist">Мои желания</string>
    <string name="settings">Настройки</string>
    <string name="profile">Профиль</string>
    <string name="logout">Выйти</string>
    <string name="authorization_error">Ошибка авторизации</string>

    <string name="tab_library">Мои книги</string>
    <string name="tab_wish">Мои желания</string>
    <string name="tab_settings">Настройки</string>

    <string name="add_book_title">Новая книга</string>
    <string name="author_hint">Автор</string>
    <string name="title_hint">Название</string>
    <string name="publisher_hint">Издательство</string>
    <string name="date_hint">Год издания</string>
    <string name="content">Содержание:</string>
    <string name="add_work">Добавить произведение</string>
    <string name="save">Сохранить</string>

    <string name="library_is_empty">Здесь пока нет книг</string>
    <string name="content_is_empty">В книге пока ничего нет</string>
    <string name="book_saved">Книга сохранена</string>

    <string name="from_gallery">Из галереи</string>
    <string name="take_photo">Сделать фото</string>
    <string name="by_default">По умолчанию</string>
    <string name="cancel">Отмена</string>
    <string name="select">Выберите источник</string>

    <string name="default_web_client_id">535793210417-7anfdtlr3edgrq6ekul5jvllcbkftu2t.apps.googleusercontent.com</string>
</resources>