<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/welcome_text"
        style="@style/Text.Auth"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@id/name_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        style="@style/Text.EditText.Login"
        android:id="@+id/name_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        app:layout_constraintBottom_toTopOf="@id/email_edit"
        android:hint="@string/name_hint"/>

    <EditText
        style="@style/Text.EditText.Login"
        android:id="@+id/email_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        app:layout_constraintBottom_toTopOf="@id/pass_edit"
        android:hint="@string/email"/>


    <EditText
        style="@style/Text.EditText.Login"
        android:id="@+id/pass_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        app:layout_constraintBottom_toTopOf="@id/conf_pass"
        android:hint="@string/password"/>

    <EditText
        style="@style/Text.EditText.Login"
        android:id="@+id/conf_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="54dp"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        app:layout_constraintBottom_toTopOf="@id/register_btn"
        android:hint="@string/password_hint"/>

    <TextView
        style="@style/Text.TextViewBtn.Gradient"
        android:id="@+id/register_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/register_btn" />

    <TextView
        style="@style/Text.AuthSec"
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/login_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>