<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/welcome_text"
        style="@style/Text.Auth"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/secondary_text"
        style="@style/Text.AuthSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_login"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"/>


    <EditText
        style="@style/Text.EditText.Login"
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        app:layout_constraintBottom_toTopOf="@id/pass"
        android:hint="@string/email"/>


    <EditText
        style="@style/Text.EditText.Login"
        android:id="@+id/pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="125dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        android:hint="@string/password"/>

    <TextView
        style="@style/Text.TextViewBtn.Gradient"
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/login_btn" />

    <TextView
        style="@style/Text.AuthSec"
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_btn"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>