<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/margin_16"
    tools:context=".add_book.ui.fragment.AddBookFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_16"
        android:background="@drawable/gradient"
        android:elevation="4dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/ProgressBar"
            android:layout_marginTop="140dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/contentGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tvAddBookTitle,tilAuthor, tilTitle,
            tilPublisher,tilDate,tvContentTitle,tvContentHint,rvBookContent,tvAddWorkBtn, tvSaveBook" />

        <TextView
            android:id="@+id/tvCloseMessage"
            style="@style/Text.22.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/book_saved"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAddBookTitle"
            style="@style/Text.22.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_book_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAuthor"
            style="@style/TextInputLayout.Light.NoActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAddBookTitle"
            android:hint="@string/author_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAuthor"
                style="@style/Text.InputEditText.Light.NoActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTitle"
            style="@style/TextInputLayout.Light.NoActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAuthor"
            android:hint="@string/title_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                style="@style/Text.InputEditText.Light.NoActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPublisher"
            style="@style/TextInputLayout.Light.NoActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilTitle"
            android:hint="@string/publisher_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPublisher"
                style="@style/Text.InputEditText.Light.NoActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDate"
            style="@style/TextInputLayout.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPublisher"
            android:hint="@string/date_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                style="@style/Text.InputEditText.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberSigned"
                android:digits="0123456789-"
                android:maxLength="4"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvContentTitle"
            style="@style/Text.22.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28"
            android:text="@string/content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilDate" />


        <TextView
            android:id="@+id/tvContentHint"
            style="@style/Text.22.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/content_is_empty"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvContentTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBookContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvContentTitle"
            tools:itemCount="5"
            tools:listitem="@layout/item_content" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_work"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/margin_46"
            app:backgroundTint="@color/brown"
            android:foreground="@drawable/ic_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvBookContent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_book"
            style="@style/Button.Outlined.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_36"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fab_add_work" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
