<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/on_boarding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown"
    tools:context=".on_boarding.ui.fragment.OnBoardingFragment">

    <TextView android:id="@+id/tvSkipBtn"
        style="@style/Text.TextViewBtn.Border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_60"
        android:layout_marginEnd="@dimen/margin_36"
        android:text="@string/skip_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView android:id="@+id/ivImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_36"
        android:background="@color/brown"
        android:elevation="@dimen/elevation"
        android:src="@drawable/image_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSkipBtn" />

    <TextView android:id="@+id/tvOnBoardingText"
        style="@style/Text.OnBoarding"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/margin_22"
        app:layout_constraintBottom_toTopOf="@+id/tvNextBtn"
        app:layout_constraintEnd_toEndOf="@id/ivImage"
        app:layout_constraintStart_toStartOf="@id/ivImage"
        app:layout_constraintTop_toBottomOf="@id/ivImage"
        tools:text="@string/on_boarding_text_1"/>

    <TextView android:id="@+id/tvNextBtn"
        style="@style/Text.TextViewBtn.Gradient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_60"
        android:text="@string/next_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ivImage"
        app:layout_constraintStart_toStartOf="@id/ivImage"
        app:layout_constraintTop_toBottomOf="@id/tvOnBoardingText" />

</androidx.constraintlayout.widget.ConstraintLayout>